# stackium

./: .gitignore  Aarch64.toml  Aarch64Cargo.toml  CHANGELOG.md  Cargo.toml  README.j2  README.md  build.rs  build_test.sh  error.c  index.html  main  main.c  monospace.css  nestingopen.rb  schema.json  test  test.c  test2  test2.c  test3  test3.c  test4  test4.c  test5  test5.c  test6  test6.c  test7  test7.c
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: asciidoctor.yml  docs.yml  main.yml
docs/: beginner_example.adoc  error.c  graph.c  index.adoc  memory_view.adoc  monospace.css  setup.adoc  simple_example.adoc  stackium.adoc  stackium.html  windows.adoc
docs/partials/: header.adoc
src/: breakpoint.rs  debugger.rs  main.rs  prompt.rs  util.rs  variables.rs  web.rs
src/debugger/: breakpoint.rs  error.rs  registers.rs  util.rs
src/gui/: command_line.rs  debug_view.rs  debugging.rs  file_picker.rs  mod.rs  run.rs
stackium_shared/: Cargo.toml
stackium_shared/src/: lib.rs
ui/: Cargo.toml  index.html  rust-toolchain.bak
ui/assets/: sw.js
ui/src/: BreakpointWindow.rs  app.rs  breakpoint_window.rs  code_window.rs  command.rs  control_window.rs  debugger_window.rs  frame_history.rs  graph_window.rs  lib.rs  location.rs  main.rs  map_window.rs  memory_window.rs  register_window.rs  rotated_plot_text.rs  settings_window.rs  syntax_highlighting.rs  toggle.rs  variable_window.rs
web/: index.html
