[package]
name = "memory_debugger"
author = "Julia Herbsthofer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui"]
web = []
gui = []

[dependencies]
nix = { version = "0.26.2", features = ["default", "personality"] }
clap = { version = "4.1.6", features = ["derive"] }
dialoguer = { version = "0.10.3", features = ["completion", "default"] }
addr2line = "0.19.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tiny_http = "0.12.0"
iced = { version = "0.9.0", features = ["glow"] }
