[package]
name = "stackium"
author = "Julia Herbsthofer"
version = "0.1.7"
edition = "2021"
rust-version = "1.71.1"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web"]
web = []

[dependencies]
nix = { version = "0.26.2", features = ["default", "personality"] }
clap = { version = "4.1.6", features = ["derive"] }
dialoguer = { version = "0.10.3", features = ["completion", "default"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tiny_http = "0.12"
object = "0.31.1"
gimli = "0.27.3"
env_logger = "0.10.0"
schemars = "0.8.12"
stackium_shared = { path = "./stackium_shared" }
stackium_ui = { path = "./ui" }
include_dir = "0.7.3"
mime_guess = "2.0.4"
regex = "1.9.5"
